--- a/paper/Manuscript.tex
+++ b/paper/Manuscript.tex
@@ -136,7 +136,7 @@ urlcolor={blue!80!black}}
 
     As validation, we generate the ``observations" using the same model we'll use for fitting, with parameter values of $n=1.36$ and $B'=258$, and four temperature values of 150, 200, 250, and 300 K. These ``observations" are shown in ~\autoref{ID_data}a. When \texttt{bayesim} imports observed data, it can optionally discard data points that are very close by to each other in order to reduce computational load on modeling less informative points -- the observed points that were actually imported (59 out of 305 total ``observations") are shown as overlaid scatter dots.
 
-    The lower part of ~\autoref{ID_data} shows the posterior distributions after the first inference run and after each round of subdivision, demonstrating that \texttt{bayesim} gets progressively closer to the ``true" values as the loop continues iterating. In addition, on the first inference run (prior to any subdivision), an average of 45\% of grid points had larger model uncertainty than experimental uncertainty, while after the second subdivision, only 1.9\% did, while the average absolute error of the highest-probability model decreased from 0.03 after the first run to 0.007 after the second subdivision.
+    ~\autoref{ID_data}b shows the posterior distributions after the first inference run and after each round of subdivision, demonstrating that \texttt{bayesim} gets progressively closer to the ``true" values as the loop continues iterating. In addition, on the first inference run (prior to any subdivision), an average of 45\% of grid points had larger model uncertainty than experimental uncertainty, while after the second subdivision, only 1.9\% did, while the average absolute error of the highest-probability model decreased from 0.03 after the first run to 0.007 after the second subdivision.
 
     In addition, the initial grid had 400 boxes, the singly subdivided grid 164, and the final grid (4x initial resolution) had 144, meaning the overall additional computational effort to quadruple the fit precision was less than producing the initial simulation set. In comparison, using a ``brute-force'' grid approach, reaching 4x precision would take $4^n$ times the computational load in $n$ dimensions, i.e. 16x for this case. The exact factor of improvement is problem-dependent, but in all cases the load is significantly less than the exponential scaling of the prior approach.
 
@@ -149,8 +149,7 @@ urlcolor={blue!80!black}}
       \label{SnS_data}
     \end{figure}
 
-    We start on a significantly coarser grid than Ref.~\cite{SnSJoule} and show only one level of subdivision to make the example feasible to run on a personal computer. \autoref{SnS_data} shows the results from this fit done in \texttt{bayesim} compared to the higher-resolution grid analysis done previously. Note that the inference step in full-resolution grid took a few hours, while the adaptive grid fit takes a few minutes. While the fit precision is of course lower at only one level of subdivision, the extracted values are generally in agreement and more importantly, the relationship between the mobility and lifetime (namely, that the product, i.e. the diffusion length), is constrained, emerges just as clearly. The differences in fitted values stem from the fact that the prior published analysis didn't account for model uncertainty, while this feature is included in \texttt{bayesim}. For more details on this, see the Supporting Information.
-
+    We start on a significantly coarser grid than Ref.~\cite{SnSJoule} and show only one level of subdivision to make the example feasible to run on a personal computer. \autoref{SnS_data} shows the results from this fit done in \texttt{bayesim} compared to the higher-resolution grid analysis done previously. Note that the inference step in full-resolution grid took a few hours, while the adaptive grid fit takes a few minutes. While the fit precision is of course lower at only one level of subdivision, the extracted values are generally in agreement and more importantly, the relationship between the mobility and lifetime (namely, that the product, i.e. the diffusion length), is constrained, emerges just as clearly. The differences in fitted values stem from the fact that the prior published analysis didn't account for model uncertainty, while this feature is included in \texttt{bayesim}.
 
 \section*{Conclusions}
  We have introduced \texttt{bayesim}, a Python-based adaptive grid sampled Bayesian inference code which is flexible to the model used to calculated likelihood as well as the parameter space over which to fit. We provided two examples of application of the code in the space of characterizing PV devices using JVT(i) measurements, as this is the authors' area of expertise. However, nothing about the code or the approach limits it to application in PV materials. Any situation where there is:
@@ -158,7 +157,7 @@ urlcolor={blue!80!black}}
    \item a forward model that captures the relevant physics (particularly one that is relatively expensive to evaluate), and
    \item a set of measurements of the output of that model as a function of several experimental conditions
  \end{itemize}
- would be amenable to \texttt{bayesim}. The online documentation page~\cite{docs} maintains a list of examples which will grow as the authors become aware of/implement more, and the latest version of the code can always be found in the Github repository~\cite{gh}. The online documentation also hosts other useful information, such as detailed documentation of every class and function in \texttt{bayesim}, a more extensive technical background section than is included here, and an updated manual for usage of the code.
+ would be amenable to \texttt{bayesim}. The online documentation page~\cite{docs} maintains a list of examples which will grow as the authors become aware of/implement more. The latest version of the code can always be found in the Github repository~\cite{gh}, and the most recent stable and thoroughly-tested version is installable via PyPI~\cite{pypi}. The online documentation also hosts other useful information, such as detailed documentation of every class and function in \texttt{bayesim}, a more extensive technical background section than is included here, a list of planned future features, and an updated manual for usage of the code.
 
 \section*{Acknowledgements}
 R.C.K. acknowledges the funding of a Blue Waters Graduate Fellowship. This work was supported by a TOTAL SA research grant funded through MIT\text{ei}, the MIT Energy Initiative.
