--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -97,6 +97,13 @@ pages={51--56}
  howpublished={\url{https://pv-lab.github.io/bayesim/_build/html/index.html}}
 }
 
+@Misc{pypi,
+ author = {Rachel C. Kurchin and Giuseppe Romano},
+ title={bayesim},
+ year = {2018},
+ howpublished={\url{https://pypi.org/project/bayesim}}
+}
+
 @article{multinest,
  author = {Feroz, F. and Hobson, M. P. and Bridges, M.},
  title = {MultiNest: an efficient and robust Bayesian inference tool for cosmology and particle physics},
